<?xml version="1.0"?>
<package>
  <name>pingfang_setgoals</name>
  <version>0.1.0</version>
  <description>

     pingfang_setgoals

  </description>
  <maintainer email="devin@gmail.com">devin</maintainer>
  <author>devin</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <build_depend>move_base_msgs</build_depend>
  <run_depend>move_base_msgs</run_depend>
  <build_depend>actionlib</build_depend>
  <run_depend>actionlib</run_depend>

 
</package>
