<?xml version="1.0"?>
<package>
  <name>pingfang_msgs</name>
  <version>0.2.6</version>
  <description>Messages for pingfang</description>

  <author email="devin91@126.com">devin</author>

  <maintainer email="devin91@126.com">devin</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
